--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "destpat",
   "version": "0.1.0",
-  "homepage": "https://florsala.github.io/DestinoP",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,6 +19,7 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://destinopatagonia.com/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
